@@ -6,9 +6,9 @@ set -e
 
 printf "Test seccomp filter (bad - no trailing newline)"
 
-echo -n "missingnewline" > $TMP/myprofile
+echo -n "missingnewline" > $TMP/snap.name.app
 
-if $L snap.name.app myprofile /bin/true 2>/dev/null; then
+if $L snap.name.app /bin/true 2>/dev/null; then
     # true returned successfully, length test failed
     FAIL
 fi
