@@ -4,7 +4,7 @@ set -e
 
 . $(pwd)/common.sh
 
-cat >$TMP/myprofile <<EOF
+cat >$TMP/snap.name.app <<EOF
 # super strict filter
 EOF
 
@@ -12,7 +12,7 @@ EOF
 # filtering
 
 printf "Test that seccomp filtering kills processes"
-if $L snap.name.app myprofile /bin/true 2>/dev/null; then
+if $L snap.name.app /bin/true 2>/dev/null; then
     # true returned successfully, our filtering is broken!
     FAIL
 else
