@@ -5,6 +5,10 @@ ubuntu-core-launcher (2.0) UNRELEASED; urgency=medium
   * Allow for graceful migrations from ubuntu-core-launcher to snap-run by
     providing both commands as binary packages, with proper dependencies and
     post-installation scripts that manage apparmor profile changes.
+  * Discard the useless duplicate argument. Now snap-run is invoked with
+    'snap-name $SECURITY_TAG $COMMAND...'. Previously, security tag was
+    duplicated. In the future this will change once again, so that security
+    tag is derived from an argument containing $SNAP_NAME and $APP_NAME. 
 
  -- Zygmunt Krynicki <zygmunt.krynicki@canonical.com>  Sun, 22 May 2016 16:14:24 +0300
 
